--- a/inetpub/wwwroot/ServicesMvc/Views/Fahrer/Partial/Auftraege/FreieAuftraegeGridAuftragsDetails.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Fahrer/Partial/Auftraege/FreieAuftraegeGridAuftragsDetails.cshtml
@@ -1,45 +1,45 @@
 ﻿@model CkgDomainLogic.Fahrer.Models.FahrerAuftrag
 
-<div class="grid-auftrags-details">
-    
-    @Html.DisplayNameFor(m => m.AuftragsNr) <strong>#@Model.AuftragsNr</strong> <br />
+<div id="Auftragsdetails" class="grid-auftrags-details">
 
-    @Html.DisplayNameFor(m => m.KundenName) <strong>@Model.KundenName</strong> <br />
+        @Html.DisplayNameFor(m => m.AuftragsNr) <strong>#@Model.AuftragsNr</strong> <br />
+
+        @Html.DisplayNameFor(m => m.KundenName) <strong>@Model.KundenName</strong> <br />
 
 
 
-    @if (Model.WunschLieferDatum != null)
-    {
+        @if (Model.WunschLieferDatum != null)
+        {
+            <div>
+                @Html.DisplayNameFor(m => m.WunschLieferDatum): <strong> @Model.WunschLieferDatum.GetValueOrDefault().ToString("d") </strong>
+            </div>
+        }
+
         <div>
-            @Html.DisplayNameFor(m => m.WunschLieferDatum): <strong> @Model.WunschLieferDatum.GetValueOrDefault().ToString("d") </strong> 
+            @Html.DisplayNameFor(m => m.PlzOrtStart): <strong>@Model.PlzOrtStart</strong>
         </div>
-    }
+        <div>
+            @Html.DisplayNameFor(m => m.UebernahmeZeitVonFormatted): <strong>@Model.UebernahmeZeitVonFormatted</strong>
+        </div>
+        <div>
+            @Html.DisplayNameFor(m => m.UebernahmeZeitBisFormatted): <strong>@Model.UebergabeZeitBisFormatted</strong>
+        </div>
 
-    <div>
-        @Html.DisplayNameFor(m => m.PlzOrtStart): <strong>@Model.PlzOrtStart</strong>
-    </div>
-    <div>
-        @Html.DisplayNameFor(m => m.UebernahmeZeitVon): <strong>@Model.UebernahmeZeitVon</strong>
-    </div>
-    <div>
-        @Html.DisplayNameFor(m => m.UebernahmeZeitBis): <strong>@Model.UebernahmeZeitBis</strong>
-    </div>
-
-    <div>
-        @Html.DisplayNameFor(m => m.PlzOrtZiel): <strong>@Model.PlzOrtZiel</strong>
-    </div>
-    <div>
-        @Html.DisplayNameFor(m => m.UebergabeZeitVon): <strong>@Model.UebergabeZeitVon</strong>
-    </div>
-    <div>
-        @Html.DisplayNameFor(m => m.UebergabeZeitBis): <strong>@Model.UebergabeZeitBis</strong>
-    </div>
+        <div>
+            @Html.DisplayNameFor(m => m.PlzOrtZiel): <strong>@Model.PlzOrtZiel</strong>
+        </div>
+        <div>
+            @Html.DisplayNameFor(m => m.UebergabeZeitVonFormatted): <strong>@Model.UebergabeZeitVonFormatted</strong>
+        </div>
+        <div>
+            @Html.DisplayNameFor(m => m.UebergabeZeitBisFormatted): <strong>@Model.UebergabeZeitBisFormatted</strong>
+        </div>
 
         @if (Model.OrtRueck.IsNotNullOrEmpty())
-    {
-        <div>
-            @Html.DisplayNameFor(m => m.PlzOrtRueck): <strong>@Model.PlzOrtRueck</strong> <br />
-        </div>
-    }
+        {
+            <div>
+                @Html.DisplayNameFor(m => m.PlzOrtRueck): <strong>@Model.PlzOrtRueck</strong> <br />
+            </div>
+        }
 
-</div>
+    </div>
