--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/Partial/UserMenuUserInfoDropdown.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/Partial/UserMenuUserInfoDropdown.cshtml
@@ -1,7 +1,14 @@
 ﻿@model CkgDomainLogic.General.Contracts.ILogonContextDataService
 <li class="dropdown user">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-        <img alt="" src="~/assets/img/avatar_small.png">
+        @if(Model.UserNameForDisplay == "Pia Schmidt")
+        {
+            <img alt="" src="~/assets/img/blondeFrau.jpg">
+        }
+        else
+        {
+            <img alt="" src="~/assets/img/avatar_small.png">
+        }
         <span class="username">@(Model.UserNameForDisplay ?? Model.UserName) </span>
         <i class="icon-angle-down"></i>
     </a>
