--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/UserMenuUserInfoDropdown.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/UserMenuUserInfoDropdown.cshtml
@@ -1,8 +1,17 @@
 ﻿@model CkgDomainLogic.General.Contracts.ILogonContextDataService
 <li class="dropdown user">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-        <span class="username">@(Model.UserNameForDisplay ?? Model.UserName) </span> 
-        <div class="userbild" style="background-image:url(/ServicesMvc/_Themes/AH2015/images/avatar.png);"> </div>
+        @if (Model.UserNameForDisplay == "Pia Schmidt")
+        {
+            <div id="divUserbild" style='height: 100%; width: 100%; object-fit: contain'>
+                <div class="userbild" style="background-image: url(/ServicesMvc/_Themes/AH2015/images/blondeFrau.jpg);"> </div>
+            </div>
+        }
+        else
+        {
+            <div class="userbild" style="background-image: url(/ServicesMvc/_Themes/AH2015/images/avatar.png);"> </div>
+        }
+        <span class="username">@(Model.UserNameForDisplay ?? Model.UserName) </span>         
     </a>
     <ul class="dropdown-menu">
         
