--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Summary.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Summary.cshtml
@@ -77,6 +77,7 @@
                       columns.XBound(c => c.WunschKennz3);
                       columns.XBound(c => c.ReservationNr);
                       columns.XBound(c => c.ReservationName);
+                      columns.XBound(c => c.MindesthaltedauerDays);
                       columns.XBound(c => c.ZulassungFahrzeugart);
                   })
               .XAutoColumnConfiguration()
