--- a/inetpub/wwwroot/ServicesMvc/Views/Fahrer/Partial/Auftraege/FreieAuftraegeGridAuftragsCommandBar.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Fahrer/Partial/Auftraege/FreieAuftraegeGridAuftragsCommandBar.cshtml
@@ -32,6 +32,8 @@
                 else
                     $("#btnRegisterForOrder").css("display", "none");
 
+                $("#Ergebnis").addClass("hide");
+
             }
         });
     }
