--- a/inetpub/wwwroot/ServicesMvc/Views/Equi/Historie/Partial/Typdaten.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Equi/Historie/Partial/Typdaten.cshtml
@@ -73,6 +73,6 @@
 
     <h4 class="form-section">@Localize.Comments</h4>
 
-    @Html.FormTextAreaFor(m => m.Bemerkungen, new { @class = "m-wrap", @readonly = "readonly" }, null, 40, 6)
+    @Html.FormTextAreaFor(m => m.Bemerkungen, new { @class = "m-wrap", @readonly = "readonly" })
 
 </form>
