--- a/inetpub/wwwroot/PortalZLD/Styles/default_BigIE6.css
+++ b/inetpub/wwwroot/PortalZLD/Styles/default_BigIE6.css
@@ -1034,12 +1034,12 @@ div#content div#innerContentRight div#data table tbody tr td a.Tablebutton:hover
 }
 
 
-* html .GridTableHead
+* html .GridTableHead, .GridTableFoot
 {
     background-image: url(/PortalZLD/Images/overflowThead.png);
 	background-color: #9b9b9b;
 	height:23px;
-	color:#FFFFFF;
+	color:#FFFFFF !important;
 	
 }
 
@@ -1048,6 +1048,10 @@ div#content div#innerContentRight div#data table tbody tr td a.Tablebutton:hover
     padding-right:5px;
 	padding-left:15px;
     }
+
+* html .GridTableFoot td {
+    color:#ffffff !important;
+}
 
 * html .GridTableHead th
 {
