--- a/inetpub/wwwroot/PortalZLD/Styles/defaultAH.css
+++ b/inetpub/wwwroot/PortalZLD/Styles/defaultAH.css
@@ -1044,12 +1044,12 @@ div#content div#innerContent div#innerContentRight div#login table tbody tr td.h
 }
 
 
-.GridTableHead
+.GridTableHead, .GridTableFoot
 {
 	background-image: url(../Images/overflowThead.png);
 	background-color: #9b9b9b;
 	height:23px;
-	color:#FFFFFF;
+	color:#FFFFFF !important;
 	
 }
 
@@ -1058,6 +1058,10 @@ div#content div#innerContent div#innerContentRight div#login table tbody tr td.h
 	padding-right:5px;
 	padding-left:15px;
 	}
+
+.GridTableFoot td {
+    color:#ffffff !important;
+}
 
 .GridTableHead th
 {
