--- a/inetpub/wwwroot/ServicesMvc/Views/Fahrer/Partial/Auftraege/FreierAuftragDetailsCommand.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Fahrer/Partial/Auftraege/FreierAuftragDetailsCommand.cshtml
@@ -3,40 +3,13 @@
 
 <div class="grid-auftrags-command-bar">
 
-    <button type="button" class="btn blue" onclick="ShowDetails(@Model.AuftragsNr)">
+    <button type="button" class="btn blue" onclick="ShowDetailsX('@Model.AuftragsNr')">
         <i class="icon-info"></i>   
             @LocalizeConstants.Details
     </button>
-
     
 </div>
 
-
-
-<script>
-    
-    function ShowDetails(auftragsnr) {
-        $.ajax({
-            type: "POST",
-            url: "ShowFreieAuftraegeDetails",
-            data: { auftragsId: auftragsnr },
-            loadingShow: false,
-            success: function (result) {
-                $("#PopupDiv").html(result);
-
-                $.magnificPopup.open({
-                    items: { src: $("#PopupDiv") },
-                    type: 'inline',
-                    alignTop: false,
-                    removalDelay: 300,
-                    mainClass: 'my-mfp-zoom-in'
-                });
-            }
-        });
-
-    }
-
-</script>
 
 <style>
     
