--- a/inetpub/wwwroot/ServicesMvc/Views/Fahrer/Partial/Common.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Fahrer/Partial/Common.cshtml
@@ -148,3 +148,28 @@
 </style>
 
 
+<script>
+
+    function ShowDetailsX(auftragsnr) {
+
+        $.ajax({
+            type: "POST",
+            url: "ShowFreieAuftraegeDetails",
+            data: { auftragsId: auftragsnr },
+            loadingShow: false,
+            success: function (result) {
+                $("#PopupDiv").html(result);
+
+                $.magnificPopup.open({
+                    items: { src: $("#PopupDiv") },
+                    type: 'inline',
+                    alignTop: false,
+                    removalDelay: 300,
+                    mainClass: 'my-mfp-zoom-in'
+                });
+            }
+        });
+
+    }
+
+</script>
