Sz Mode "Umkennzeichnung", enhanced work

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Common.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Common.cshtml
@@ -110,6 +110,9 @@
             var stepName = FormWizard.GetStepKey(step - 1);
 
             try {
+                if (stepName === "Umkennzeichnung")
+                    stepName = "Zulassungsdaten";
+
                 $("#AjaxForm" + stepName).submit();
                 window.scrollTo(0, 0);
                 return false;
