--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/SzHome.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/SzHome.cshtml
@@ -9,9 +9,19 @@
         margin: 10px 30px 12px 0;
         background-color: #3BAFDA !important;
     }
+    a.tile:hover {
+        text-decoration: none !important;
+    }
     .sz-home .tile-object {
+        padding-left: 10px;
+        padding-right: 10px;
         text-transform: uppercase;
         text-align: center;
+    }
+    .sz-home .tile-body img {
+        display: inline-block;
+        text-align: left;
+        margin: 0 0 0 22px !important;
     }
 </style>
 
@@ -23,12 +33,12 @@
 
     @foreach (var homepageButton in Model.SonderzulassungsHomepageItems)
     {
-        <a class="tile bg-tile-pdf" href="@homepageButton.AppUrl">
+        <a class="tile" href="@homepageButton.AppUrl">
             <div class="tile-body">
-                <i class="@homepageButton.IconCssClass"></i>
+                <img src="@homepageButton.IconFileName" alt=""/>
             </div>
             <div class="tile-object">
-                @Localize.TranslateResourceKey(homepageButton.LocalizeKey)
+                @Model.FormatHomepageButtonLabel(Localize.TranslateResourceKey(homepageButton.LocalizeKey))
             </div>
         </a>
     }
