Enhanced work on SZ mode "Umkennzeichnung"

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZulassungsdatenForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZulassungsdatenForm.cshtml
@@ -384,6 +384,7 @@
         @Html.HiddenFor(m => m.IsSchnellabmeldung)
         @Html.HiddenFor(m => m.AnzahlAbmeldungenAenderbar)
         @Html.HiddenFor(m => m.ModusPartnerportal)
+        @Html.HiddenFor(m => m.SonderzulassungsMode)
 
         if (Model.ModusAbmeldung)
         {
