--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZulassungsdatenFormAnmeldung.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZulassungsdatenFormAnmeldung.cshtml
@@ -13,9 +13,8 @@
 {
     @Html.HiddenFor(m => m.HaltereintragVorhanden)
     @Html.HiddenFor(m => m.Expressversand)
-    @Html.HiddenFor(m => m.SonderzulassungsMode)
 
-    if (Model.ModusSonderzulassung && Model.SonderzulassungsMode == SonderzulassungsMode.Firmeneigen)
+    if (Model.SonderzulassungsMode == SonderzulassungsMode.Firmeneigen)
     {
         @Html.HiddenFor(m => m.ZulassungsartMatNr)
 
@@ -39,7 +38,7 @@ else
         @Html.FormDatePickerFor(m => m.Zulassungsdatum, new {@class = "m-wrap small"}) 
         @Html.FormTextBoxFor(m => m.Zulassungskreis, new { @class = "m-wrap xsmall uppercase", @onchange = "return ZulassungskreisOnChange();" })
 
-        @if (Model.ZulassungsartAutomatischErmitteln && !(Model.ModusSonderzulassung && Model.SonderzulassungsMode == SonderzulassungsMode.Umkennzeichnung))
+        @if (Model.ZulassungsartAutomatischErmitteln && Model.SonderzulassungsMode != SonderzulassungsMode.Umkennzeichnung)
         {
             <div class="kroschke-evb-control-group-border">
                 <div id="hint-versandzulassung" class="alert alert-success">
@@ -56,7 +55,7 @@ else
             @Html.HiddenFor(m => m.Expressversand)
         }
 
-        @if (Model.ModusSonderzulassung && Model.SonderzulassungsMode == SonderzulassungsMode.Umkennzeichnung)
+        @if (Model.SonderzulassungsMode == SonderzulassungsMode.Umkennzeichnung)
         {
             @Html.FormTextBoxFor(m => m.AuftragsNr, new { @class = "m-wrap medium uppercase" })
             @Html.FormTextBoxFor(m => m.VerkaeuferKuerzel, new { @class = "m-wrap medium" })
@@ -83,7 +82,7 @@ else
         
         @if (Model.ZulassungsartAutomatischErmitteln)
         {
-            if (Model.ModusSonderzulassung && Model.SonderzulassungsMode == SonderzulassungsMode.Umkennzeichnung)
+            if (Model.SonderzulassungsMode == SonderzulassungsMode.Umkennzeichnung)
             {
                 @Html.FormTextBoxFor(m => m.FahrgestellNr, new { @class = "m-wrap medium uppercase", maxlength = 17 })
             }
@@ -156,7 +155,7 @@ else
                 columns.XBound(c => c.ResKennz).ClientTemplate("<input id='ResKennz_<#= data.FinID #>' type='text' class='inputwidth uppercase editkennz blockrk blockdisabled' data-fieldname='ResKennz' value='<#= data.ResKennz #>' />");
                 columns.XBound(c => c.ReservationNr).ClientTemplate("<input id='ReservationNr_<#= data.FinID #>' type='text' class='inputwidth editreskennz blockrk blockdisabled' data-fieldname='ReservationNr' value='<#= data.ReservationNr #>' />");
                 columns.XBound(c => c.ReservationName).ClientTemplate("<input id='ReservationName_<#= data.FinID #>' type='text' class='inputwidth editreskennz blockrk blockdisabled' data-fieldname='ReservationName' value='<#= data.ReservationName #>' />");
-                if (Model.ModusSonderzulassung && Model.SonderzulassungsMode == SonderzulassungsMode.Firmeneigen)
+                if (Model.SonderzulassungsMode == SonderzulassungsMode.Firmeneigen)
                 {
                     columns.XBound(c => c.MindesthaltedauerDays).ClientTemplate("<input id='MindesthaltedauerDays_<#= data.FinID #>' type='text' class='inputwidth editmisc blockrk haltedauer' data-fieldname='MindesthaltedauerDays' value='<#= data.MindesthaltedauerDays #>' onkeyup='SonderzulHaltedauerOnKeyPress()' autocomplete='off' />");
                 }
