sz mode "Umschreibung", enhanced / final work

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Common.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Common.cshtml
@@ -539,6 +539,11 @@
         $("#AjaxFormZulassungsdaten").submit();
     }
 
+    function CheckBestehendesKennzeichenBeibehalten() {
+        $("#UiUpdateOnly").val(true);
+        $("#AjaxFormZulassungsdaten").submit();
+    }
+
     function ZulassungskreisOnChange() {
         $.ajax(
             {
