--- a/inetpub/wwwroot/ServicesMvc/assets/plugins/glyphicons_halflings/css/halflings.css
+++ b/inetpub/wwwroot/ServicesMvc/assets/plugins/glyphicons_halflings/css/halflings.css
@@ -1046,3 +1046,9 @@ html .halflings {
     margin-left: 2px!important;
     width: 16px;   
 }
+
+.tuev,.tuev:hover {
+  background-image: url(../images/TUEV.png);
+  background-position: 8px 2px;
+  background-repeat: no-repeat;
+}
