--- a/inetpub/wwwroot/ServicesMvc/Views/Login/LoginForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Login/LoginForm.cshtml
@@ -15,7 +15,7 @@
             </div>
         
             <div id="loginDiv">
-                 <h3 class="form-title">@Localize.LoginToYourAccount</h3>
+                 <h3 class="form-title">@Localize.LoginToYourAccount2</h3>
 
                  @if (Model.IsValid)
                  {
